# ErisBot

./: pyproject.toml
Bot/: erisbot.py  eriscore.py
Bot/Cogs/: fun.py  help.py
Bot/Unloaded-Cogs/: countdown.py  example.py  images.py  test.py
